--- a/MCM2021 LaTeX paper/MCM2021 LaTeX paper.tex
+++ b/MCM2021 LaTeX paper/MCM2021 LaTeX paper.tex
@@ -22,6 +22,7 @@
 \usepackage{fancyhdr}
 \usepackage{lipsum}
 \usepackage{multicol,caption}
+\usepackage{subcaption}
 
 \usepackage{footnote}
 \usepackage{float}
@@ -80,6 +81,7 @@ sorting=ynt]{biblatex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
+\begin{multicols}{2}
 \tableofcontents
 \listoftables
 \newpage
@@ -92,7 +94,6 @@ sorting=ynt]{biblatex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\begin{multicols}{2}
 	
 %\section{Pre-planning analysis}
 %- 
@@ -314,10 +315,12 @@ Further assumptions made in the formulation of our model that have not yet been 
 \end{itemize}
 
 \section{Parameter selection and representative result}
-To select realistic values for the parameters, we created a representative run of the coupled growth and decomposition model, consulting the literature to find parameter values. An overview of the parameter selection for this representative run can be seen in (parameter table), however several parameters are worth some discussion.
+We created a representative run of the coupled growth and decomposition model to select realistic values for the parameterts, with some values found by consulting literature. An overview of the parameter selection for this representative run can be seen in Table \ref{table3}, however several parameters are worth some discussion.
  
 \subsection{Growth model parameters}
-The effect of two main parameters were studied for their effect on the growth model's result: the branching rate and the hyphal death rate. These parameters were not agreed upon in the literature so their effect on the model output was evaluated and they were selected from a pool of possible values based on the most likely realistic output. Most results of the growth model were comprised of traveling wave solutions, converging to a uniform distribution in both space and time. This can be thought of a the maximum growth of the fungus into it's total space. The branching rate ($\alpha_{1}$) was found to increase the hyphal density in the end behavior of the solution, with the ending density increasing as $\alpha_{1}$ increases. The hyphal death rate ($\gamma_{1}$) was found to increase the oscillations in time and thus larger $\gamma_{1}$ values would increase the oscillations and the time to reach a given end-behavior. Many of the papers discussing the values of these parameters [Edelstein 1982] [Lin 2016] [Schnepf 2007] [Du 2019] are concerned more with short term dynamics in perfectly ideal conditions. The purposes of this paper is the assess the long term decomposition rates under different conditions, so parameters that can predict long-term behavior, comparable to long term decomposition dynamics described in [Moorhead 2000] [Moorhead 2006] [Moorhead 1991] were selected.
+Two main parameters were studied for their effect on the growth model's result: the branching rate and the hyphal death rate. These parameters were not agreed upon in literature so values were selected from a pool of possible valus depending on their effect on the model to converge on the most likely realistic output. 
+
+Most results of the growth model were comprised of traveling wave solutions, converging to a uniform distribution in both space and time. This can be thought of as a convergence to the maximum growth of the fungus into its total space. The branching rate ($\alpha_{1}$) was found to increase the hyphal density in the end behavior of the solution, with the ending density increasing as $\alpha_{1}$ increases. The hyphal death rate ($\gamma_{1}$) was found to increase the oscillations in time and larger $\gamma_{1}$ values would increase the oscillations and the time to reach a given end-behavior. Many papers (Edelstein (1982), Lin et al. (2016), Schnepf et al. (2007), Du et al. (2019)) discussing the values of these parameters were concerned more with short-term dynamics in perfectly ideal conditions \cite{Edelstein1982, Lin2016, Schnepf2008, Du2019}. The purposes of this paper is the assess the longterm decomposition rates under variable conditions, so parameters that could predict long-term behavior, comparable to long term decomposition dynamics described in Moorhead et al. (2000), Moorhead et al. (2006), and Moorhead et al. (1991) were selected \cite{Moorhead1991, Moorhead2000, Moorhead2006}.
 
 %\end{multicols}
 %\begin{center}
@@ -328,25 +331,55 @@ The effect of two main parameters were studied for their effect on the growth mo
 %\begin{multicols}{2}
 
 \subsection{Decomposition parameters}
-The value for $G$ is interpreted as a rate constant, relating a concentration of relative enzymes to the maximum rate of carbon decomposition. formulation for $S_{M}$ and $S_{T}$ come from [Moorhead 1991] and in said model, a simpler equation is used for the reaction dynamics for decomposition of carbon. Because of this, we cannot use the same rate constant and must base this parameter of agreement with other models or experimental data. The most important aspect we examined for the section of $G$ was the timescale of decomposition to be comparable with that of [Lustenhouwer 2019].
+The value for $G$ represents a rate constant relating the concentration of relevant enzymes to the maximum rate of carbon decomposition. Formulation for $S_{M}$ and $S_{T}$ come from Moorhead et al. (1991) which uses a simpler equation to describe the reaction dynamics for decomposition of carbon \cite{Moorhead1991}. Our model adds complexity to this so we based this parameter on agreement with other more similar models and experimental data. The most important conclusion drawn for $G$ was in selecting a timescale of decomposition to be comparable with that of Lustenhouwer et al. (2019) \cite{Lustenhouwer2020}.
+
+\end{multicols}
+\begin{figure}[H]
+	\begin{subfigure}[t]{0.5\textwidth}
+		\includegraphics[width=\textwidth]{biomass_growth_no_Cterm.png}
+		\caption{Modello compartimentale mammellare (o mammillare).}
+		\label{fig-a}
+	\end{subfigure}\hfill
+	\begin{subfigure}[t]{0.5\textwidth}
+		\includegraphics[width=\textwidth]{biomass_growth_Cterm.png}
+		\caption{Modello compartimentale catenario.}
+		\label{fig-b}
+	\end{subfigure}
+	\caption{Principali topologie dei modelli compartimentali.} 
+	\label{fig:main}
+\end{figure}
+\begin{multicols}{2}
+
+%\end{multicols}
+%\begin{center}
+%\includegraphics[width=\linewidth]{biomass_growth_no_Cterm.png}
+%\captionof{figure}{Figure caption}
+%\label{Fig 2.}
+%\end{center}
+%\begin{multicols}{2}
 
 \subsection{Representative results}
-As a representative result of the coupled growth and decomposition model, the two were run using the parameters summarized in (parameter table). In the growth model, $\rho$ was found to exibit travelling wave dispersion throughout space, as similarly shown in [Mimura 2000] and [Edelstein 1982]. Due to the simulation only running for a timespan of 3 years, the decrease in carbon over time looks fairly linear, with slight fluctuations likely due to the fluctuating fungal biomass densities over time. The first initial runs were done without the coupling term in the growth equations, so the growth model was assuming an abundance of nutrients and not affected by the decreasing concentration of carbon. Depending on the timescale being simulated, that could be a perfectly valid assumption, as short time scales tended to show little overall decrease in the concentration of holocellulose carbon. However the differences seen in including the nutrient availability term in the growth equations become more apparent as longer time scales are considered. The effects of this can be seen in our results. The overall biomass was also mostly unaffected other than replacing decaying oscillations towards a steady state with a somewhat constantly increasing biomass overtime with a decaying slope. Overall, including the nutrient availability term in the growth equation captures more of the fundamental interaction that this paper is concerned with (that of decomposing wood and ground litter rather than free-growing fungi), so it was included in further analysis. 
+We ran the coupled growth and decomposition model using parameters summarized in Table \ref{table3} to obtain a representative result. In the growth model, $\rho$ was found to exhibit travelling wave dispersion throughout space, as similarly shown in Mimura et al. (2000) and Edelstein (1982) \cite{Mimura2000, Edelstein1982}. As a consequence of only running the simulation for a timespan of three years, the decrease in carbon over time looks fairly linear, with slight fluctuations likely due to the fluctuating fungal biomass densities over time. 
+
+In the first initial runs, no coupling term defining a limited nutrient availability was present in the growth equations. This eliminated the effects of decreasing concentration of carbon as the growth model assumed an abundance of nutrients was present. Under short time scales this could be a perfectly valid assumption, as short time scales tended to show little overall decrease in the concentration of holocellulose carbon. However the consequences seen from introducing this term in the growth equations become more apparent as longer time scales are considered. These effects can be seen in our results. The outcome for overall biomass of the communitty was mostly unaffected other than replacing decaying oscillations towards a steady state with a somewhat constantly increasing biomass overtime with a decaying slope. 
+
+Overall, including the nutrient availability term in the growth equation captures more of the fundamental interaction that this paper is concerned with (that of decomposing wood and ground litter rather than free-growing fungi), so it remained present for further analysis.
 
 \section{Analysis}
 
 \subsection{Distribution of relative concentration of fungi}
-The model allows us to adjust the relative concentrations of each fungi species being simulated. In the model, this is represented with a set of $0<c_{i}\leq 1$ such that $\sum c_{i} = 1$. Each one of these $c_{i}$ multiplies the rates of hyphal density increase and boundary/initial conditions in the growth model. With this metric, the relative concentrations of different fungi species are forced to satisfy the conditions $B_{i}/B_{tot}=c_{i}$ where $B_{i}$ is the biomass of the $i$'th fungi species. This is obviously an unrealistic constraint on the system as the relative concentrations of different fungal species should fluctuate with time as the different species of fungi grow at varying rates. But for the purpose of assessing the effect of biodiversity on the overall decomposition of the substraight, concentration fluctuation would add unneeded complexity to the analysis. \\
-Also considered for this analysis are the competitive rankings of the different fungi species (CITATION NEEDED). The ranking-distribution coefficient, $a$ is then defined to be
+The model allows us to adjust the relative concentrations of each fungi species being simulated. In the model, this is represented with a set of $0<c_{i}\leq 1$ such that $\sum c_{i} = 1$. Each one of these $c_{i}$ multiplies the rates of hyphal density increase and boundary/initial conditions in the growth model. With this metric, the relative concentrations of different fungi species are forced to satisfy the conditions $B_{i}/B_{tot}=c_{i}$ where $B_{i}$ is the biomass of the '$i$'th fungi species. This is an unrealistic constraint, as the relative concentrations of different fungal species should fluctuate with time as the different species of fungi grow at varying rates. But for the purpose of assessing the effect of biodiversity on the overall decomposition of the substraight, concentration fluctuation would add unneeded complexity to the analysis. \\
+This analysis also considers the competitive rankings of the different fungi species \cite{Maynard2019}. The ranking-distribution coefficient, $a$ is then defined to be
 \begin{equation} \label{eq}
 a = \sum_{i=1}^{n} c_{i}*R_{i}
 \end{equation}
-Where $R_{i}$ s the competitive ranking for the $i$'th fungi species. The ranking-distribution coefficient can be though of as a dot-product in $n$-dimensional space (where $n$ is the number of various fungi species being simulated). So $a$ will be highest when the $n$-dimensional vectors "line-up" in the sense that the distribution of fungi species is closest to the distribution of competitive rankings.\\
+Where $R_{i}$ s the competitive ranking for the '$i$'th fungi species. The ranking-distribution coefficient can be though of as a dot-product in $n$-dimensional space (where $n$ is the number of various fungi species being simulated). So $a$ will be highest when the $n$-dimensional vectors "line-up" in the sense that the distribution of fungi species is closest to the distribution of competitive rankings.\\
 To study the effects of $a$ on the system overall, sample $c$ values had to be chosen. Due to a lack of literature results on simple, constant fungi distributions, arbitrary Gaussian distributions spread out over the different species of fungi were chosen. Because we are mainly concerned with the relation of any given distribution to the competitive rankings, the functions can be viewed as arbitrary or random distributions (because the ordering of fungal species in our Gaussian distribution has no physical meaning). The results of model runs using these various distributions is shown in (figure carbon-decrease-fungi-distribution). To assess the overall effectiveness of a single species distribution, the average carbon decrease over the whole interval was found via the equation $C_avg = \int (C_{0}-C)dt/(\delta t)$ where $C_{0}$ is our initial amount of carbon and $\delta t$ is the total time change over which the carbon decreases. The results of comparing this average carbon decomposed to the $a$ value for the species distribution in question is seen in (figure a-competative-distribution-coef-to-avg-Clost). Several interesting qualitative behaviors arise from the this comparison. Firstly, there is a clear smooth trend between $a$ and the average carbon decomposed up to approximately $a=0.65$. At this point the smooth trend completely vanishes and the data points appear to be randomly distributed in the area. We hypothesize that this critical value of $a$ could be representative of a bifurcation point; however further analysis on the dynamics of these coupled systems interacting would need to be done to investigate this hypothesis further. Additionally we notice that at this critical point, the average carbon decomposed tends to grow significantly. The physical interpretation of this critical point is deeply related to the effectiveness of the competitive rankings as they relate to a biologically diverse system. The results show that beyond a certain point, distributing the biodiversity more closely to the competitive rankings does not have any noticeable effect on the overall effectiveness of the system. \\
 This leads to two possibilities beyond the critical point for the system. One possibility is that optimum biodiversity is based on more complex dynamics than the competitive rankings can assess. The other possibility is that the system behaves in a chaotic or random nature beyond this critical point and no clear metric of biodiversity could be correlated to the effectiveness of a given distribution.
 
 \subsection{Environmental fluctuations}
-Realistically, the external environment dictates environmental conditions of the system both in short time scales (year fluctuations for example) and long time scales. To study the effects of these short time scale fluctuations, we choose to implement a yearly moisture cycle. The cycle dictates a repeating, yearly pattern of $\psi$ and thus $\nu$. To Incorporated this into the model, $\nu$ and $\psi$ were dynamically allocated over time based on the oscillatory behavior shown in (figure oscillating-psi-nu). Due to time limitations and scarce data on the parameters of these yearly oscillations, only two species of fungi were simulated. A comparison of their respective decomposition contributions with that of similar environmental conditions but static $\nu$ and $\psi$ is shown in (figure oscillating2nonoscillating-psi-contribution). There is no note-worthy new oscillatory motion seen in these results. There is also seen to be a slight increase in the effectiveness of both fungi in the oscillatory case. 
+Realistically, the external environment dictates environmental conditions of the system both in short time scales (year fluctuations for example) and long time scales. Due to the time scales of our model, the effects of very fast fluctuations (due to outside forces) on the scale of days are not considered as relative changes in the model's state have negligible changes on the order of a day. Thus we define our short term fluctuations to be roughly seasonal as this dictates the majority of local environmental variability. To study the effects of these short time scale fluctuations, we choose to implement an abstracted yearly moisture cycle, specifically that of the temperate forest environment. The cycle oscillates between the average yearly maximum and minimum values of $\psi$ twice a year, creating a rough yearly pattern of $\psi$ and thus $\nu$ for a given fungi from experimental data \cite{Zobel2001}\cite{Maynard2019}. Note that this moisture model is limited in assuming one period oscillation between a maximum and a minimum yearly, neglecting the reality of oscillating between local minimum in summer and winter and locate maximums in fall and spring. To incorporate this into the model, $\nu$ and $\psi$ were dynamically allocated over time based on the oscillatory behavior shown in (figure oscillating-psi-nu). Due to time limitations and scarce data on the parameters over these yearly oscillations, only two species of fungi were simulated. A comparison of their respective decomposition contributions with that of similar environmental conditions but static $\nu$ and $\psi$ is shown in (figure oscillating2nonoscillating-psi-contribution). There is no note-worthy new oscillatory motion seen in these results. There is also seen to be a slight increase in the effectiveness of both fungi in the oscillatory case. The interpretation of this increase can be that for time scales on the order of a year, the positives affect of increasing $\nu$ is greater than that of the negative affect of decreasing $\nu$ by the same amount. This would lead us to believe that faster oscillations of $\nu$ will generally have a positive net impact on the decomposition. The frequency limits of this principle would require further investigation. 
+
 
 \subsection{$\nu$ vs Average Contribution to Substrate Decay} %avg_contr_nu_environment.fig
 Using the decomposition model, average contribution to substrate decay and the tip elongation rate $\nu$ can be found for each fungal species for a given environmental configuration. Aside from indicating an expected positive correlation between $\nu$ and contribution, we find that in general, environments with a higher moisture potential lead to greater contributions overall and a greater contribution sensitivity to $\nu$ in our model. Our model agrees with the notion of water potential serving as an important limiting factor to the decomposition ability of individual fungi. This corroborates with various findings, that find soil moisture as a particularly influential environmental factor, influencing elongation through pressure gradients and testing of tolerance \cite{Maynard2019} \cite{Lustenhouwer2020}. %i think there may be a better citation, i am tired
@@ -357,6 +390,22 @@ Similarly, a sampling of different environmental parameters within the decomposi
 
 \subsection{Average Contribution vs $\nu$ with Competitive Rankings} %avg_contr_nu_competative_rankings.fig  Maybe ask trevor to change colors or flip colors (final point(s) difficult to see
 With one set of environmental parameters, we can gain insight into how different species of fungi potentially interact relative to each other. In addition to an expected lose positive correlation between $\nu$ and the average contribution of a given fungi, these is a lose correlation of higher fungi competitive ranking with greater $\nu$ and greater average contribution. This suggests that the fungi that are more 'active' in our model, with the largest growth rates and proportions, are also the most competitive. Competitive ranking has a higher correlation with $/nu$, indicating that in our model growth rate may be more significant than proportion when it comes to competitive circumstances. This aligns with established trends of the primary 2 fungal niches \cite{Maynard2019}.
+
+\section{Limitations}
+\subsection{Growth Coupling}
+The coupling between our growth model and our decomposition kinetics model was scarsely found in literature. Instead, literature would in some cases adopt a simpler mechanism to describe fungi growth to match decomposition kinetics of equal complexity to our model, or would in other cases implement a more complex mechanism for fungi nutrient uptake while neglecting much of the complexity from interactions between fungi and with the larger environment. This resulted in a lack of applicable parameters from literature to choose from for our coupled model, for which we decided either to pull parameter values from simpler models described above or to empirically derive our parameters by fitting the model output to other reasonable outputs (as was done with the parameter $G$). 
+
+\subsection{Parameter Choices and Enzyme Concentration}
+In our comparison of different methods for coupling the growth equation to the decomposition kinetics, there are some unrealistic disagreements between the early behavior of each growth model; mainly that of a slight increase in the first maximum biomass reached by the carbon limiting growth model. Expected behavior would exhibit less biomass gained over time when the nutrient level is limited. This result is likely a consequence of bad parameter choices derived with imperfect methods described above or a failure to incorporate a more realistic relationship between the decomposed carbon pool and available carbon pool from which the fungi supplement their own nutrient supply.
+
+The Michaelis-Menten dynamics we implemented often considers enzyme concentration to be proportional to the maximum rate of the reaction. Taking this concentration to be proportional to total fungal biomass in some set region of space does not account for the concentration of enzymes becoming saturated as the fungi spread farther out through space. A more realistic incorporation of this idea into the model would need to address the geometric complexities involved in examining only one region of a much larger fungi growth. Even further unpackaging of these dynamics would account for fungal growth into areas that do not have physical access to the carbon being decomposed. At this point, a simplified one-dimensional growth model would not suffice.
+
+The effect of considering biomass proportional to concentration would be seen in the longer term behavior of the model, as the fungi growth becomes limited. We may expect to see more complex dynamics transitioning between the "unbounded" fungi growth and the steady-state behavior of fungi growth. Thus, the largest area of error for our results due to this assumption is likely in the area of time transitioning unbounded growth and steady-state behavior.
+
+\subsection{Direct Interactions}
+
+It was observed in literature that there are direct interactions between fungi growing in the same environment by various mechanisms (NEED CITATION). Our model ignored the effects of these direct interactions and instead focused on indirect interactions via competition for the same nutrients source. The effects of fungi's mechanisms of sabotage via physical means is typically taken to be negligible and the dynamics of such interactions are likely too complicated to consider. However, the effect of space-limitation would likely cause there to be non-negligible limitations on fungal growth due to others obstructing their path or due to total lack of available space. Essentially, our simulation considered fungi competing for food, when in reality, they compete for food and space. In considering these effects, care must be taken to the space of consideration and the limitations of that space. Further review would need to be done to assess the limitations of various spaces, but because we are considering fungi in open ground liter without any obvious obstructions to their growth, spacial limitations on the fungi growth may be considered negligible. This assumption would not apply in the case of geometric isolation of a particular fungi but the geometric access of particular fungi to the substraight is another complexity that would need to be addressed in a higher-dimensional growth model. 
+
 
 %\begin{ColumnFigure}
 %	\centering
