--- a/MCM2021 LaTeX paper/masterbib.bib
+++ b/MCM2021 LaTeX paper/masterbib.bib
@@ -392,7 +392,8 @@ abstract = { A mathematical model that reproduces fungal proliferation and morph
 	Volume = {45},
 	Year = {1983},
 	Bdsk-Url-1 = {https://pubmed.ncbi.nlm.nih.gov/16346263},
-	Bdsk-Url-2 = {https://doi.org/10.1128/AEM.45.4.1188-1195.1983}}
+	Bdsk-Url-2 = {https://doi.org/10.1128/AEM.45.4.1188-1195.1983}
+}
 
 @Article{Fu2014,
 	AUTHOR = {Fu, W. J. and Jiang, P. K. and Zhou, G. M. and Zhao, K. L.},
@@ -658,7 +659,7 @@ abstract = { A mathematical model that reproduces fungal proliferation and morph
 }
 
 @misc{Paton2019, 
-	title={Barro Colorado Island, Clearing_Temperature, manual}, url={https://smithsonian.figshare.com/articles/dataset/Barro_Colorado_Island_Clearing_Temperature_manual/10042496/3}, DOI={10.25573/data.10042496.v3}, 
+	title={Barro Colorado Island, Clearing$_$Temperature, manual}, url={https://smithsonian.figshare.com/articles/dataset/Barro_Colorado_Island_Clearing_Temperature_manual/10042496/3}, DOI={10.25573/data.10042496.v3}, 
 	abstractNote={
 	Barro Colorado Island (BCI), Clearing ('El Claro')
 	Location: 9°9'47.21"N, 79°50'17.64"W
@@ -667,7 +668,10 @@ abstract = { A mathematical model that reproduces fungal proliferation and morph
 	
 	The Clearing is a small, open area surrounded by forest and some buildings. Station established in 1972. Consists of a Stevenson screen with max/min thermometers and air pressure sensor. Temperature/humidity sensor, rain gauge and evaporation sensors are located at various locations around the screen.
 	}, 
-	publisher={The Smithsonian Institution}, author={Paton, Steve}, year={2019}, month={Oct}
+	publisher={The Smithsonian Institution}, 
+	author={Paton, Steve}, 
+	year={2019}, 
+	month={Oct}
 } 
 
 @inproceedings{Andren1999,
