Further limtations and future work

--- a/Trevor_writing/stuff.tex
+++ b/Trevor_writing/stuff.tex
@@ -119,5 +119,9 @@ The Michaelis-Menten dynamics we implemented often considers enzyme concentratio
 The effect of considering biomass proportional to concentration would be seen in the longer term behavior of the model, as the fungi growth becomes limited. We may expect to see more complex dynamics transitioning between the "unbounded" fungi growth and the steady-state behavior of fungi growth. Thus, the largest area of error for our results due to this assumption is likely in the area of time transitioning unbounded growth and steady-state behavior. \\
 It was observed in literature that there are direct interactions between fungi growing in the same environment by various mechanisms (NEED CITATION). Our model ignored the effects of these direct interactions and instead focused on indirect interactions via competition for the same nutrients source. The effects of fungi's mechanisms of sabotage via physical means is typically taken to be negligible and the dynamics of such interactions are likely too complicated to consider. However, the effect of space-limitation would likely cause there to be non-negligible limitations on fungal growth due to others obstructing their path or due to total lack of available space. Essentially, our simulation considered fungi competing for food, when in reality, they compete for food and space. In considering these effects, care must be taken to the space of consideration and the limitations of that space. Further review would need to be done to assess the limitations of various spaces, but because we are considering fungi in open ground liter without any obvious obstructions to their growth, spacial limitations on the fungi growth may be considered negligible. This assumption would not apply in the case of geometric isolation of a particular fungi but the geometric access of particular fungi to the substraight is another complexity that would need to be addressed in a higher-dimensional growth model. 
 
+\section*{Limitation pt2}
+Values for our parameter, $K_e$ were difficult to find in the literature, as there were not agreed upon dynamics of all four fungi considered. Additionally, cellobiohydrolase was sometimes found to follow different dynamics than the Michaelis-Menten equation \cite{Razavi2015}. To obtain a more accurate value for this parameter, a study of the model's overall sensitivity to varying $K_e$ should be conducted. Additionally, a more accurate representation of fungi interactions would account for more distinctive differences in decomposition dynamics between various enzymes and more than four different enzymes. But any study of alternative decomposition kinetics between enzymes was not done due to time limitations. 
+The environmental conditions were analyzed for short term and long term fluctuation (short term being yearly cycles and long term being overall biome transitions over time). Our analysis found that oscillating environmental conditions showed slightly better performance for two species of fungi, but additional studies involving more species of fungi were not studied to to time limitations. In this analysis, the effects of varying $\psi$ only were studied. Realistic environmental fluctuations would see both temperature and $\psi$ fluctuated simultaneously, but for the purpose of studying the general affect of oscillating environmental conditions, this can be taken as a representative sample. The analysis additional left out discussion of fluctuation in between our proposed long term and short term fluctuations. Future studies of the model's response to fluctuating environmental conditions could include a study of the system's response to a continuum of frequencies for environmental fluctuations, as well as studying the effects of fluctuating multiple environmental conditions simultaneously. 
+The correlations found between distributions of fungi species and overall performance of the system was found for static environmental conditions in one specific biome (that of an Arid climate). The correlation found before the critical point is poorly understood and would require furhter investigation or numerical fitting to be studied in more detail. The change occurring at the critical point may also be a result of numerical error in approximate solution to the differential equations being solved (although there is no other indication that this is the case). Additionally, Further analysis of this correlation could include assessment of this correlation in different biomes and in oscillating environmental conditions. 
 
 \end{document}
