--- a/Trevor_writing/stuff.tex
+++ b/Trevor_writing/stuff.tex
@@ -122,6 +122,11 @@ It was observed in literature that there are direct interactions between fungi g
 \section*{Limitation pt2}
 Values for our parameter, $K_e$ were difficult to find in the literature, as there were not agreed upon dynamics of all four fungi considered. Additionally, cellobiohydrolase was sometimes found to follow different dynamics than the Michaelis-Menten equation \cite{Razavi2015}. To obtain a more accurate value for this parameter, a study of the model's overall sensitivity to varying $K_e$ should be conducted. Additionally, a more accurate representation of fungi interactions would account for more distinctive differences in decomposition dynamics between various enzymes and more than four different enzymes. But any study of alternative decomposition kinetics between enzymes was not done due to time limitations. 
 The environmental conditions were analyzed for short term and long term fluctuation (short term being yearly cycles and long term being overall biome transitions over time). Our analysis found that oscillating environmental conditions showed slightly better performance for two species of fungi, but additional studies involving more species of fungi were not studied to to time limitations. In this analysis, the effects of varying $\psi$ only were studied. Realistic environmental fluctuations would see both temperature and $\psi$ fluctuated simultaneously, but for the purpose of studying the general affect of oscillating environmental conditions, this can be taken as a representative sample. The analysis additional left out discussion of fluctuation in between our proposed long term and short term fluctuations. Future studies of the model's response to fluctuating environmental conditions could include a study of the system's response to a continuum of frequencies for environmental fluctuations, as well as studying the effects of fluctuating multiple environmental conditions simultaneously. 
-The correlations found between distributions of fungi species and overall performance of the system was found for static environmental conditions in one specific biome (that of an Arid climate). The correlation found before the critical point is poorly understood and would require furhter investigation or numerical fitting to be studied in more detail. The change occurring at the critical point may also be a result of numerical error in approximate solution to the differential equations being solved (although there is no other indication that this is the case). Additionally, Further analysis of this correlation could include assessment of this correlation in different biomes and in oscillating environmental conditions. 
+The correlations found between distributions of fungi species and overall performance of the system was found for static environmental conditions in one specific biome (that of an Arid climate). The correlation found before the critical point is poorly understood and would require further investigation or numerical fitting to be studied in more detail. The change occurring at the critical point may also be a result of numerical error in approximate solution to the differential equations being solved (although there is no other indication that this is the case). Additionally, Further analysis of this correlation could include assessment of this correlation in different biomes and in oscillating environmental conditions. 
+
+\section*{Conclusion}
+Advantages of certain species were taken into account via their relative concentrations of different enzymes as well as in their dependence of $\nu$ on temperature and moisture. These advantages were found to have a positive correlation with the contribution of different species to the overall decomposition. However, this exact relationship is unclear from the data. The competitive ranking of different fungi species was found to correlate to a higher sensitivity on $\nu$ in relation to the species' contribution to decomposition. Distributions according to these rankings in our model were found to positively impact overall system performance up to a critical point, where the trend dissolves completely. The presence of short term environmental fluctuations were found to have a slight positive impact on performance for a small sample of fungi species simulated. Long term environmental fluctuations, in the form of transforming overall biomes, indicates that overall fungi decomposition productivity should generally decrease as more arid conditions with less available moisture are approached.
+
+The dynamics of different biodiversity distributions is complex, resulting in limited scope of certain descriptive values, such as competitive ranking, in capturing the full efficiency of the system. For a given species, an increase in hyphal extensional rate corresponds to different relative increases in efficiency based on environmental conditions as well as the species' sensitivity to those conditions. Generally, increasing $\nu$ has a greater affect for species with a lower moisture tolerance in an optimal environment and a lesser affect for species with a lower moisture tolerance in a sub-optimal environment. Additionally, the results would imply that species with a lower moisture tolerance would perform significantly worse under long term fluctuations compared with species of a higher moisture tolerance, which would perform only slightly worse. The effect of short term fluctuations on species with a lower moisture tolerance would require further study to discern. 
 
 \end{document}
